<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookStore</string>
    <string name="action_settings">Настройки</string>
    <string name="action_search">Поиск</string>
    <string name="author">Введите автора</string>
    <string name="add">Поиск</string>
    <string name="no_records">Соответствий не найдено</string>
    <string name="title_activity_full_info">Подробная информация</string>
    <string name="name_of_book_value">Название книги</string>
    <string name="author_of_book_value">Автор книги</string>
    <string name="description">Краткое описание:</string>
    <string name="text_sample_descr">The impact of the search dialog on your activity lifecycle The impact of the search dialog on your activity
        The impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your acti

        lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycle</string>
    <string name="language">Язык: </string>
    <string name="category_of_book">Жанр: </string>
    <string name="btn_show_all_info">Детальная информация</string>
    <string name="text_category_of_book_value">роман</string>
    <string name="text_language_value">русский</string>
    <string name="title_activity_test_api">TestAPIActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_favorite_list">Избранные</string>
    <string name="cost">Цена:</string>
    <string name="cost_value">133 руб.</string>
    <string name="strike_style"><strike> %s</strike></string>
    <string name="action_favorites">Избранные</string>
    <string name="text_list_is_empty">Список избранных пуст</string>

</resources>
